Fixes #3.